--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
             <div class=" text-center">
                 <div class="numbers d-flex flex-md-row flex-wrap justify-content-center">
                     <div class="rect">
-                        <h1>45</h1>
-                        <p>Events</p>
+                      <img class="feature" src="img/feature/3.jpg" alt="">
+                
                     </div>
                     <div class="rect">
                         <h1>45</h1>
@@ -171,14 +171,13 @@
                         <div class="card">
                             <div class="card-body">
                                 <div class="title">
-                                    <h5 class="card-title">By XYZ</h5>
+                                    <h5 class="card-title">Data structures</h5>
                                 </div>
                                 <p class="card-text">
                                     Master concepts of data structures and algorithms.
                                 </p>
                                 <div class="pricing">
-                                    <h1>Data Structure</h1>
-                                    <a href="#" class="btn btn-dark px-5 py-2 primary-btn mb-5">Purchase Now</a>
+                                    <button class="btn-3">know more</button>
                                 </div>
                             </div>
                         </div>
@@ -191,8 +190,8 @@
                                     Be a pro web developer.
                                 </p>
                                 <div class="pricing">
-                                    <h1>Web Designing</h1>
-                                    <a href="#" class="btn btn-dark px-5 py-2 primary-btn mb-5">Purchase Now</a>
+                                    <button class="btn-3">know more</button>
+                                    
                                 </div>
                             </div>
                         </div>
@@ -205,8 +204,7 @@
                                     Be a full time data science engieer in fang company
                                 </p>
                                 <div class="pricing">
-                                    <h1>Data Science</h1>
-                                    <a href="#" class="btn btn-dark px-5 py-2 primary-btn mb-5">Purchase Now</a>
+                                    <button class="btn-3">know more</button>
                                 </div>
                             </div>
                         </div>
@@ -214,7 +212,7 @@
                 </div>
             </div>
         </section>
-        <section class="section-3  p-0 text-center">
+        <!-- <section class="section-3  p-0 text-center">
             <div class="row">
                 <div class="col-md-12 col-sm-12">
                     <h1>Download Our App for all Platform</h1>
@@ -224,7 +222,7 @@
                     </p>
                 </div>
             </div> -->
-            <div class="platform row">
+            <!-- <div class="platform row">
                 <div class="col-md-6 col-sm-12 text-right">
                     <div class="desktop shadow-lg">
                         <div class="d-flex flex-row justify-content-center">
@@ -248,7 +246,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> --> 
 
         <!-- Section 4 -->
         <section class="section-4">
@@ -347,12 +345,12 @@
         </section> -->
 
     </main>
-    <div class="surveybutton">
+    <!-- <div class="surveybutton">
         <a class="survey-btn" href="survey.html">
             <button class="btn btn-primary px-5 py-2 primary-btn" id="login-btn">Survey</button>
         </a>
-    </div>
-    <footer>
+    </div> -->
+    <!-- <footer>
         <div class=" p-0">
             <div class="row text-left">
                 <div class="col-md-5 col-sm-5">
@@ -392,8 +390,116 @@
                 </div>
             </div>
         </div>
+    </footer> -->
+    <footer class="footer-section">
+        <div class="container">
+            <div class="footer-cta pt-5 pb-5">
+                <div class="row">
+                    <div class="col-xl-4 col-md-4 mb-30">
+                        <div class="single-cta">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <div class="cta-text">
+                                <h4>Find us</h4>
+                                <span>AAG – 11, Shipra Krishna Azure <br> Kaushambi, Ghaziabad, UP – 201010</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-md-4 mb-30">
+                        <div class="single-cta">
+                            <i class="fas fa-phone"></i>
+                            <div class="cta-text">
+                                <h4>Call us</h4>
+                                <span>+91 9910018925,<br>+91 767846713,<br>+91-120-4567841</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-md-4 mb-30">
+                        <div class="single-cta">
+                            <i class="far fa-envelope-open"></i>
+                            <div class="cta-text">
+                                <h4>Mail us</h4>
+                                <span>info@gohackathon.in <br>
+                                    gohackathon2k22@gmail.com</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-content pt-5 pb-5">
+                <div class="row">
+                    <div class="col-xl-4 col-lg-4 mb-50">
+                        <div class="footer-widget">
+                            <div class="footer-logo">
+                                <a href="index.html"><img src="logo.jpg" class="img-fluid" alt="logo"></a>
+                            </div>
+                            <div class="footer-text">
+                                <p>Go Hackathon comprises eminent Industry professionals, educators, and students meant to nurture talent among budding tech professionals. </p>
+                            </div>
+                            <div class="footer-social-icon">
+                                <span>Follow us</span>
+                                <a href="#"><i class="fab fa-facebook-f facebook-bg"></i></a>
+                                <a href="#"><i class="fab fa-twitter twitter-bg"></i></a>
+                                <a href="#"><i class="fab fa-google-plus-g google-bg"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-md-6 mb-30">
+                        <div class="footer-widget">
+                            <div class="footer-widget-heading">
+                                <h3>Useful Links</h3>
+                            </div>
+                            <ul>
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">about</a></li>
+                                <li><a href="#">events</a></li>
+                                <li><a href="#">Hackathon</a></li>
+                                <li><a href="#">gallery</a></li>
+                                <li><a href="#">Contact us</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-md-6 mb-50">
+                        <div class="footer-widget">
+                            <div class="footer-widget-heading">
+                                <h3>Subscribe</h3>
+                            </div>
+                            <div class="footer-text mb-25">
+                                <p>Don’t miss to subscribe to our new feeds, kindly fill the form below.</p>
+                            </div>
+                            <div class="subscribe-form">
+                                <form action="#">
+                                    <input type="text" placeholder="Email Address">
+                                    <button><i class="fab fa-telegram-plane"></i></button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="copyright-area">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-6 col-lg-6 text-center text-lg-left">
+                        <div class="copyright-text">
+                            <p>Copyright © 2023 |  <a href="https://gohackathon.in/">GOHACKATHON</a> | All Right Reserved.</p>
+                        </div>
+                    </div>
+                    <div class="col-xl-6 col-lg-6 d-none d-lg-block text-right">
+                        <div class="footer-menu">
+                            <ul>
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">Terms</a></li>
+                                <li><a href="#">Privacy</a></li>
+                                <li><a href="#">Policy</a></li>
+                                <li><a href="#">Contact</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
