--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>About Us</title>
     <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
@@ -15,11 +16,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;700;900&display=swap"
         rel="stylesheet">
 </head>
-<body>
+<body id="body">
     <header>
         <div class="container-fluid p-0">
             <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                     <img class="logoimg" src="img/logowithoutbg.png" alt=""></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,7 +39,7 @@
                         </li>
                         <li class="nav-item dropdown">
                             <div class="dropdown">
-                                <a href="#" class="nav-link">EVENTS</a>
+                                <a href="event.html" class="nav-link">EVENTS</a>
                                 <div class="dropdown-content">
                                     <a href="#">LIVE EVENTS</a>
                                     <a href="#">UPCOMMING EVENTS</a>
@@ -50,7 +51,7 @@
                             <div class="dropdown">
                                 <a href="#" class="nav-link">HACKATHON</a>
                                 <div class="dropdown-content">
-                                    <a href="#">LEADERBOARD</a>
+                                    <a href="leaderboard.html">LEADERBOARD</a>
                                     <a href="#">PRACTICE SET</a>
                                     <a href="#">PARTICIPANTS</a>
                                     <a href="#">WINNERS</a>
@@ -58,10 +59,10 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">GALLERY</a>
+                            <a class="nav-link" href="gallery.html">GALLERY</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">CONTACT US</a>
+                            <a class="nav-link" href="contact.html">CONTACT US</a>
                         </li>
                         <li>
                             <button class="btn btn-primary px-5 py-2 primary-btn" id="login-btn">Login/Signup</button>
@@ -71,25 +72,24 @@
             </nav>
         </div>
     </header>
-    <table cellspacing="10" class="aboutsection">
-        <tr>
-            <td>
-                <h1>About Us</h1>
-                <h2>Go Hackathon</h2>
-                <p>Go Hackathon comprises of eminent Industry professionals, educators and students meant to
-                    nurture talent among budding tech professional.<br>
-                    Industry today is looking for talented students who are equipped and experience with
-                    advanced skills, software, attitude and updated industry best practices.<br>
-                    We create an eco-system of industry academia partnership and help in continuous and
-                    sustainable development of innovative ideas, which are impactful for the growing economy and
-                    society.<br>
-                    Go hackathon thrives to provide best nurturing, mentorship, skills and professional
-                    opportunities to its members and participants.
-                    We conduct series of events, seminars, hackathons, internships and Projects.<br></p>
-            </td>
-            <td><img class="imgofabout" src="img/development2" alt="Angela profile photo"></td>
-        </tr>
-    </table>
+        
+            <div class="container">
+                <div class="row">
+                    <div class="aboutsection col-lg-7">
+                        <h1>About Go Hackathon</h1>
+                        <p>Go Hackathon comprises of eminent Industry professionals, educators and students meant to
+                            nurture talent among budding tech professional.
+                            Industry today is looking for talented students who are equipped and experience with
+                            advanced skills, software, attitude and updated industry best practices.We create an eco-system of industry academia partnership and help in continuous and
+                            sustainable development of innovative ideas, which are impactful for the growing economy and
+                            society. Go hackathon thrives to provide best nurturing, mentorship, skills and professional opportunities to its members and participants.
+                            We conduct series of events, seminars, hackathons, internships and Projects.</p>  
+                    </div>
+                    <div class="imgofabout col-lg-5">
+                        <img class="imgofabout" src="img/development2" alt="Dev">
+                    </div>
+                </div>
+            </div>
     <!-- <table cellspacing="10" class="aboutsection"> -->
         <!-- <section class="aboutsection">
         <div class="aboutsectiondiv">
@@ -111,7 +111,23 @@
         </div>
     </section> -->
     <!-- </table> -->
-    <div class="bottompara">
+    <div class="container">
+        <div class="row">
+            <div class="aboutsection-bottom col-lg-12">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, cum nisi ipsam eius similique ut eaque sit nam impedit quos deleniti praesentium voluptates maxime. Harum pariatur ullam eveniet nam maxime.
+                    Illum architecto exercitationem, reprehenderit velit dolores eos quos ullam ut tempore nisi, voluptas quia iure necessitatibus eaque! Id similique aut excepturi eveniet numquam facilis ab temporibus sit deleniti, porro fugiat.
+                    Labore necessitatibus possimus eligendi tenetur accusamus omnis ad repellat magni perspiciatis maiores! Ullam, vel omnis modi doloribus sunt fugiat provident pariatur quaerat quam eaque eos temporibus veritatis cumque velit architecto!
+                    Ab eveniet iure aperiam iusto possimus nobis debitis quam earum veniam sapiente voluptatum perferendis labore, porro beatae, laboriosam autem assumenda minima recusandae magnam! Consequuntur unde quidem facere? Alias, sit labore.
+                    Atque non, ipsam explicabo impedit bis sapiente ipsum deserunt earum itaque inventore officiis consequatur facere quibusdam vero ex tempora, optio praesentium sequi, quia rerum illum deleniti. Facilis, modi.
+                    Aperiam voluptates eum expedita doloribus sapiente fuga ratione quibusdam magni aliquid necessitatibus incidunt vel delectus natus odio nulla ut, iusto hic vero aspernatur. Nobis dignissimos molestias deserunt, nulla provident soluta.
+                    Animi temporibus error, molestias esse itaque fuga sunt nostrum, autem facere dolorem delectus minus repellendus nam reprehenderit non, quisquam ducimus labore! Iste maiores ex neque nemo! Facere voluptate asperiores enim?
+                    Eveniet explicabo repellat et. Magnam, aliquam. Ducimus, ab aut repellat voluptate aliquam, animi placeat ipsa exercitationem, magnam voluptas nostrum ea. Nemo voluptate, culpa eum facilis dolorem delectus perferendis corrupti odit?
+                    Alias neque unde temporibus quo quasi sequi cumque at voluptates iste aspernatur ad cupiditate, perspiciatis consequuntur optio qui deserunt sunt eos possimus, similique ea accusamus nulla velit. Numquam, porro voluptatum!
+                    Deserunt magn.</p>
+            </div>
+        </div>
+    </div>
+    <!-- <div class="aboutsection-bottom">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, cum nisi ipsam eius similique ut eaque sit nam impedit quos deleniti praesentium voluptates maxime. Harum pariatur ullam eveniet nam maxime.
             Illum architecto exercitationem, reprehenderit velit dolores eos quos ullam ut tempore nisi, voluptas quia iure necessitatibus eaque! Id similique aut excepturi eveniet numquam facilis ab temporibus sit deleniti, porro fugiat.
             Labore necessitatibus possimus eligendi tenetur accusamus omnis ad repellat magni perspiciatis maiores! Ullam, vel omnis modi doloribus sunt fugiat provident pariatur quaerat quam eaque eos temporibus veritatis cumque velit architecto!
@@ -122,8 +138,8 @@
             Eveniet explicabo repellat et. Magnam, aliquam. Ducimus, ab aut repellat voluptate aliquam, animi placeat ipsa exercitationem, magnam voluptas nostrum ea. Nemo voluptate, culpa eum facilis dolorem delectus perferendis corrupti odit?
             Alias neque unde temporibus quo quasi sequi cumque at voluptates iste aspernatur ad cupiditate, perspiciatis consequuntur optio qui deserunt sunt eos possimus, similique ea accusamus nulla velit. Numquam, porro voluptatum!
             Deserunt magn<br></p>
-    </div>
-    <footer>
+    </div> -->
+    <!-- <footer>
         <div class="container-fluid p-0">
             <div class="row text-left">
                 <div class="col-md-5 col-sm-5">
@@ -163,6 +179,6 @@
                 </div>
             </div>
         </div>
-    </footer>   
+    </footer>    -->
 </body>
 </html>
