--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <link rel="stylesheet" href="./Style.css" />
-    <link rel="stylesheet" href="./mobile-style.css">
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="mobile-style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;700;900&display=swap"
@@ -21,17 +21,21 @@
 
 <body id="body">
     <header>
-        <div class="container-fluid">
+        <div class="container-fluid p-0">
             <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="#">
                     <img class="logoimg" src="img/logowithoutbg.png" alt=""></a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="fas fa-align-right text-dark"></i>
+                </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <!-- <div class="mr-auto"></div> -->
+                    <div class="mr-auto"></div>
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">HOME
+                            <!-- <a class="nav-link" href="#">HOME
                                 <span class="sr-only">(current)</span>
-                            </a>
+                            </a> -->
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="about.html">ABOUT US</a>
@@ -48,12 +52,12 @@
                         </li>
                         <li class="nav-item dropdown">
                             <div class="dropdown">
-                                <a href="event.html" class="nav-link">HACKATHON</a>
+                                <a href="#" class="nav-link">HACKATHON</a>
                                 <div class="dropdown-content">
                                     <a href="leaderboard.html">LEADERBOARD</a>
                                     <a href="#">PRACTICE SET</a>
                                     <a href="#">PARTICIPANTS</a>
-                                    <a href="leaderboard.html">WINNERS</a>
+                                    <a href="#">WINNERS</a>
                                 </div>
                             </div>
                         </li>
@@ -61,13 +65,10 @@
                             <a class="nav-link" href="gallery.html">GALLERY</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">CONTACT US</a>
+                            <a class="nav-link" href="contact.html">CONTACT US</a>
                         </li>
                         <li>
-                            <a href="login.html">
-                                <button class="btn btn-primary px-5 py-2 primary-btn"
-                                    id="login-btn">Login/Signup</button>
-                            </a>
+                            <button class="btn btn-primary px-5 py-2 primary-btn" id="login-btn">Login/Signup</button>
                         </li>
                     </ul>
                 </div>
