--- a/leaderboard.html
+++ b/leaderboard.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
-<html lang="en" dir="ltr">
-   <head>
-      <meta charset="utf-8">
-      <title>Gohackathon leaderboard</title>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Go Hackathon</title>
 
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
             
@@ -17,21 +17,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;700;900&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="./style.css" />
-   </head>
-   <body>
-
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Go Hackathon</title>
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
-        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <link rel="stylesheet" href="./leaderboard.css" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -41,25 +27,24 @@
             <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="#">
                     <img class="logoimg" src="img/logowithoutbg.png" alt=""></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="fas fa-align-right text-light"></i>
-                    
+                    <i class="fas fa-align-right text-dark"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <div class="mr-auto"></div>
                     <ul class="navbar-nav">
-                        <!-- <li class="nav-item active">
-                            <a class="nav-link" href="#">LEADERBOARD
+                        <li class="nav-item active">
+                            <!-- <a class="nav-link" href="#">HOME
                                 <span class="sr-only">(current)</span>
-                            </a>
-                        </li> -->
+                            </a> -->
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="about.html">ABOUT US</a>
                         </li>
                         <li class="nav-item dropdown">
                             <div class="dropdown">
-                                <a href="#" class="nav-link">EVENTS</a>
+                                <a href="event.html" class="nav-link">EVENTS</a>
                                 <div class="dropdown-content">
                                     <a href="#">LIVE EVENTS</a>
                                     <a href="#">UPCOMMING EVENTS</a>
@@ -71,7 +56,7 @@
                             <div class="dropdown">
                                 <a href="#" class="nav-link">HACKATHON</a>
                                 <div class="dropdown-content">
-                                    <a href="#">LEADERBOARD</a>
+                                    <a href="leaderboard.html">LEADERBOARD</a>
                                     <a href="#">PRACTICE SET</a>
                                     <a href="#">PARTICIPANTS</a>
                                     <a href="#">WINNERS</a>
@@ -79,10 +64,10 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">GALLERY</a>
+                            <a class="nav-link" href="gallery.html">GALLERY</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">CONTACT US</a>
+                            <a class="nav-link" href="contact.html">CONTACT US</a>
                         </li>
                         <li>
                             <button class="btn btn-primary px-5 py-2 primary-btn" id="login-btn">Login/Signup</button>
