--- a/winners.html
+++ b/winners.html
@@ -77,9 +77,19 @@
   
 <div class="main">
     <div class="head">
-
-
         
+        <div class = "container">
+            <div class ="card">
+                <img src ="img/Kunal-Thapliyal-1st-Ideathon-150x150.jpeg" alt ="Kunal Thapliyal">
+                <div class="intro">
+                    <h1> Kunal Thapliyal</h1>
+                    <p> <span> Winner Ideathon</span>- secured 1st positon in Ideathon </p>
+                </div>
+
+            </div>
+        </div>
+
+  
     </div>
 </div>
 </body>
